--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/cjss-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
-    <title>cjss</title>
+    <title>CJSS - Smart Digital Solutions</title>
   </head>
   <body>
     <div id="root"></div>
